[package]
name = "wgpuchip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
winit = "0.28.6"
wgpu = "0.16.1"
env_logger = "0.10.0"
log = "0.4.19"
pollster = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]
